--- a/src/input.css
+++ b/src/input.css
@@ -2,9 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-/* * {
+* {
   outline: 1px solid black
-} */
+}
 
 /* body::-webkit-scrollbar {
   display: none;
